# grabmaps-hackathon

./: .gitignore  Makefile  README.md  package-lock.json  package.json  vitest.config.ts
.playwright-cli/: page-2026-04-24T07-23-18-435Z.yml  page-2026-04-24T07-32-04-625Z.yml  page-2026-04-24T07-32-43-370Z.yml  page-2026-04-24T07-33-01-919Z.yml  page-2026-04-24T07-33-38-594Z.yml  page-2026-04-24T07-34-02-226Z.yml  page-2026-04-24T07-34-23-429Z.yml  page-2026-04-24T07-34-38-334Z.yml  page-2026-04-24T07-34-56-348Z.yml  page-2026-04-24T07-38-40-266Z.yml  page-2026-04-24T07-42-16-066Z.yml  page-2026-04-24T07-42-44-626Z.yml  page-2026-04-24T07-42-52-517Z.yml  page-2026-04-24T07-43-01-080Z.yml  page-2026-04-24T07-43-07-421Z.yml  page-2026-04-24T07-43-13-861Z.yml  page-2026-04-24T07-43-21-378Z.yml  page-2026-04-24T07-43-31-912Z.yml  page-2026-04-24T07-44-39-831Z.yml  page-2026-04-24T07-49-03-623Z.yml
.playwright-mcp/: page-2026-04-24T06-53-30-649Z.yml  page-2026-04-24T06-53-48-790Z.yml  page-2026-04-24T06-53-55-754Z.yml  page-2026-04-24T06-54-59-580Z.yml  page-2026-04-24T06-55-06-703Z.yml  page-2026-04-24T06-56-09-197Z.yml  page-2026-04-24T06-56-28-041Z.yml  page-2026-04-24T06-56-52-184Z.yml  page-2026-04-24T06-57-08-779Z.yml
backend/: .env.example  Makefile  pyproject.toml
backend/app/: __init__.py  config.py  data.py  grabmaps_client.py  main.py  map_style.py  models.py  photo_scoring.py  route_trimming.py  routing.py
backend/tests/: conftest.py  test_api.py  test_grabmaps_client.py  test_makefiles.py
frontend/: Makefile  package-lock.json  package.json  (+1 more)
(+63 files in other folders)
