[project]
name = "sea-go-backend"
version = "0.1.0"
description = "FastAPI backend for SEA-GO GrabMaps hackathon demo"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.124.0",
  "httpx>=0.28.0",
  "pydantic-settings>=2.12.0",
  "python-multipart>=0.0.20",
  "uvicorn[standard]>=0.38.0"
]

[dependency-groups]
dev = [
  "pytest>=9.0.0",
  "pytest-asyncio>=1.3.0",
  "ruff>=0.14.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

